# contracts_lite

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  TYPES.md  build_and_test.yml  run_tests.sh
.github/workflows/: build_and_test.yml
contracts_lite/: CMakeLists.txt  package.xml
contracts_lite/include/contracts_lite/: contract_types.hpp  contract_violation.hpp  enforcement.hpp  failure_status.hpp  simple_violation_handler.hpp  to_string.hpp
contracts_lite/test/: gtest_main.cpp  test_contracts.cpp  test_to_string.cpp
contracts_lite_example/: CMakeLists.txt
contracts_lite_example/include/contracts_lite_example/: contract.hpp  simple.hpp
contracts_lite_example/include/contracts_lite_test/: simple.hpp
contracts_lite_example/test/: test_contracts_example_build_level_AUDIT.cpp  test_contracts_example_build_level_AUDIT_OFF.cpp  test_contracts_example_build_level_AUDIT_ON.cpp  test_contracts_example_build_level_DEFAULT.cpp  test_contracts_example_build_level_DEFAULT_OFF.cpp  test_contracts_example_build_level_DEFAULT_ON.cpp  test_contracts_example_build_level_OFF.cpp  test_contracts_example_build_level_OFF_OFF.cpp  test_contracts_example_build_level_OFF_ON.cpp
contracts_lite_test/: CMakeLists.txt  package.xml
contracts_lite_test/design/: contracts-design.md
contracts_lite_test/include/contracts_lite_test/: contract.hpp
contracts_lite_test/include/example/: contract.hpp  simple.hpp
contracts_lite_test/test/: test_contracts_example_build_level_AUDIT.cpp  test_contracts_example_build_level_DEFAULT.cpp  test_contracts_example_build_level_OFF.cpp
contracts_lite_test/test/src/: gtest_main.cpp  test_contracts.cpp  test_contracts_example_build_level_AUDIT.cpp  test_contracts_example_build_level_DEFAULT.cpp  test_contracts_example_build_level_OFF.cpp
include/contracts_lite/: contract_types.hpp  enforcement.hpp  operators.hpp  range_checks.hpp  simple_violation_handler.hpp
include/contracts_lite/types/: acute_degree.hpp  acute_radian.hpp  assertions.hpp  nonnegative_real.hpp  nonzero_real.hpp  real.hpp  scalar_flicker.hpp  size_bound.hpp  strictly_positive_odd_integer.hpp  strictly_positive_real.hpp  unit_real.hpp
reqs/public/: SRD.html  index.html
reqs/srd/: HEAD-1.0.yml  SRD001.yml  SRD002.yml  SRD003.yml  SRD004.yml  SRD005.yml  SRD006.yml  SRD007.yml  SRD008.yml
test/: test_acute_degree.cpp  test_acute_radian.cpp  test_assertions.cpp  test_dimensional_analysis.cpp  test_nonnegative_real.cpp  test_nonzero_real.cpp  test_range_checks.cpp  test_real.cpp  test_return_status.cpp  test_scalar_flicker.cpp  test_size_bound.cpp  test_strictly_positive_odd_integer.cpp  test_strictly_positive_real.cpp  test_to_string.cpp  test_unit_real.cpp
