<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>contracts_lite_test</name>
  <version>0.0.1</version>
  <description>Test implementation for the contracts_lite library.</description>
  <author email="jeff@mapless.ai">Jeffrey Kane Johnson</author>
  <maintainer email="jeff@mapless.ai">Jeffrey Kane Johnson</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>contracts_lite</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
